# RustBrowser

./: .gitignore  .mcp.json.example  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml.example
.github/workflows/: ci.yml  release.yml
docs/: API.md
src/: actions.rs  budget.rs  cache.rs  cli.rs  convert.rs  extract.rs  fallback.rs  fetch.rs  lib.rs  main.rs  planner.rs  render.rs  robots.rs  session.rs  structured.rs  tokens.rs
tests/: benchmark.rs  eval.rs  integration.rs  schema_freeze.rs  session.rs
tests/fixtures/: actionable.html  article.html  docs.html  noisy.html
