[package]
name = "rustbrowser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Token-lean web content fetcher for LLMs — distills pages to clean Markdown."
repository = "https://github.com/JoshuaWangTW/RustBrowser"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
dom_smoothie = "0.17.0"
futures = "0.3.32"
htmd = "0.5.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "rustls-tls-native-roots", "gzip", "brotli", "deflate", "charset", "http2"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1.2.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake"] }
url = "2.5.8"

# Optimised release build: small, fast, single static-ish binary.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
